--- a/donate.html
+++ b/donate.html
@@ -18,7 +18,7 @@
         }
 
         .header {
-            background-color: #1a73e8;
+            background-color: #002855;
             color: white;
             padding: 1rem;
             text-align: center;
@@ -32,7 +32,7 @@
         }
 
         nav a {
-            color: #1a73e8;
+            color: #002855;
             text-decoration: none;
             margin: 0 1rem;
             font-weight: bold;
@@ -92,7 +92,7 @@
         }
 
         .amount-button:hover {
-            background-color: #1a73e8;
+            background-color: #002855;
             color: white;
         }
 
@@ -141,7 +141,8 @@
 
     <div class="container">
         <div class="donation-form">
-            <h2 style="text-align: center; margin-bottom: 1.5rem;">Make a Donation</h2>
+            <h2 style="text-align: center; margin-bottom: 0.5rem;">Make a Donation</h2>
+            <p style="text-align: center; margin-bottom: 1.5rem; color: #666;">All donations are tax-deductible</p>
             
             <form id="donation-form">
                 <div class="form-group">
