--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="contact-info" style="margin-top: 2rem; padding: 1.5rem; background-color: #f8f9fa; border-radius: 5px;">
                     <p>If you made your donation through C.V. Starr Disaster Relief Fund in person or starrdrf.org, please email (preferred) or mail the form and a copy of your receipt to:</p>
                     
-                    <p style="margin-top: 1rem;"><strong>Email:</strong> <a href="mailto:programstaff@starrfoundation.org">programstaff@starrfoundation.org</a></p>
+                    <p style="margin-top: 1rem;"><strong>Email:</strong> <a href="mailto:matchinggrants@starrdrf.org">programstaff@starrfoundation.org</a></p>
                     
                     <p style="margin-top: 1rem;"><strong>Mail:</strong><br>
                     C.V. Starr Disaster Relief Fund<br>
