--- a/donate.html
+++ b/donate.html
@@ -152,7 +152,7 @@
             <h2 style="text-align: center; margin-bottom: 0.5rem;">Make a Donation</h2>
             <p style="text-align: center; margin-bottom: 1.5rem; color: #666;">All donations are tax-deductible</p>
             
-            <form id="donation-form" action="mailto:programstaff@starrfoundation.org" method="POST" enctype="text/plain">
+            <form id="donation-form" action="mailto:matchinggrants@starrdrf.org" method="POST" enctype="text/plain">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" required>
@@ -199,6 +199,7 @@
             </address>
             <p style="margin-top: 1rem;">CV Starr Disaster Relief Fund is a 501(c)3 non-profit organization. Your gift is 100% tax deductible.</p>
             <p style="margin-top: 0.5rem;"><strong>Federal Tax ID #81-4728239</strong></p>
+            <p style="margin-top: 1rem;">Please contact us at <a href="mailto:matchinggrants@starrdrf.org" style="color: #002855; text-decoration: underline;">matchinggrants@starrdrf.org</a> for more information.</p>
         </div>
     </div>
 
