--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="content">
             <h2>Current Relief Efforts: California Wildfires</h2>
             <p>We are currently focused on providing critical support to California communities affected by devastating wildfires. Your tax-deductible contribution helps us deliver immediate relief and long-term recovery assistance, including:</p>
-            <ul>
+            <ul style="margin-left: 2rem; margin-top: 1rem; margin-bottom: 1rem;">
                 <li>Emergency shelter and supplies</li>
                 <li>Food and clean water</li>
                 <li>Medical assistance</li>
@@ -152,7 +152,7 @@
                 <div class="contact-info" style="margin-top: 2rem; padding: 1.5rem; background-color: #f8f9fa; border-radius: 5px;">
                     <p>If you made your donation through C.V. Starr Disaster Relief Fund in person or starrdrf.org, please email (preferred) or mail the form and a copy of your receipt to:</p>
                     
-                    <p style="margin-top: 1rem;"><strong>Email:</strong> <a href="mailto:matchinggrants@starrdrf.org">programstaff@starrfoundation.org</a></p>
+                    <p style="margin-top: 1rem;"><strong>Email:</strong> <a href="mailto:matchinggrants@starrdrf.org">matchinggrants@starrdrf.org</a></p>
                     
                     <p style="margin-top: 1rem;"><strong>Mail:</strong><br>
                     C.V. Starr Disaster Relief Fund<br>
