--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         .donate-button {
             display: inline-block;
-            background-color: #FF4136;
+            background-color: #2ECC40;
             color: white;
             padding: 1.25rem 2.5rem;
             text-decoration: none;
@@ -80,7 +80,7 @@
         }
 
         .donate-button:hover {
-            background-color: #E7261D;
+            background-color: #29B737;
             transform: translateY(-2px);
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
         }
@@ -105,7 +105,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>CV Starr Disaster Relief Fund</h1>
+        <h1 style="font-size: 1.5rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
     </header>
 
     <nav>
@@ -115,8 +115,7 @@
 
     <div class="container">
         <div class="hero">
-            <h1 style="font-size: 2rem;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
-            <h2 style="color: #002855; margin-top: 1.5rem; font-size: 1.8rem;">CV Starr Disaster Relief Fund</h2>
+            <h1 style="color: #002855; font-size: 2.5rem;">CV Starr Disaster Relief Fund</h1>
         </div>
 
         <div class="content">
