--- a/donate.html
+++ b/donate.html
@@ -49,66 +49,13 @@
         }
 
         .donation-form {
-            max-width: 500px;
+            max-width: 600px;
             margin: 0 auto;
             padding: 2rem;
-            background-color: #f8f9fa;
-            border-radius: 5px;
         }
 
         .form-group {
             margin-bottom: 1.5rem;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="number"] {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #dee2e6;
-            border-radius: 3px;
-        }
-
-        .amount-options {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-            gap: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        .amount-button {
-            padding: 0.5rem;
-            background-color: white;
-            border: 1px solid #1a73e8;
-            color: #1a73e8;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .amount-button:hover {
-            background-color: #002855;
-            color: white;
-        }
-
-        .submit-button {
-            background-color: #1a73e8;
-            color: white;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .submit-button:hover {
-            background-color: #1557b0;
         }
 
         .footer {
@@ -119,27 +66,19 @@
             margin-top: 2rem;
         }
 
-        .form-select {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #dee2e6;
-            border-radius: 3px;
-            margin-bottom: 0.5rem;
-        }
-
-        .mailing-info {
-            line-height: 1.8;
-        }
-
-        address {
-            font-size: 1.1rem;
-            color: #333;
+        @media (max-width: 600px) {
+            .container {
+                padding: 1rem;
+            }
+            .donation-form {
+                padding: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <header class="header">
-        <h1>CV Starr Disaster Relief Fund</h1>
+        <h1 style="font-size: 1.5rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
     </header>
 
     <nav>
@@ -149,57 +88,28 @@
 
     <div class="container">
         <div class="donation-form">
-            <h2 style="text-align: center; margin-bottom: 0.5rem;">Make a Donation</h2>
-            <p style="text-align: center; margin-bottom: 1.5rem; color: #666;">All donations are tax-deductible</p>
+            <h2 style="text-align: center; margin-bottom: 2rem; color: #002855;">WAYS TO DONATE</h2>
             
-            <form id="donation-form" action="mailto:matchinggrants@starrdrf.org" method="POST" enctype="text/plain">
-                <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
+            <div class="form-group" style="background-color: #f8f9fa; padding: 2rem; border-radius: 5px; margin-bottom: 2rem;">
+                <h3 style="color: #002855; margin-bottom: 1rem;">Donate by Check</h3>
+                <p style="margin-bottom: 1rem;">Please make checks payable to "CV Starr Disaster Relief Fund" and mail to:</p>
+                <address style="margin-bottom: 1rem; font-style: normal;">
+                    CV Starr Disaster Relief Fund<br>
+                    399 Park Ave, 3rd Floor<br>
+                    New York, NY 10022
+                </address>
+            </div>
 
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
+            <div class="form-group" style="background-color: #f8f9fa; padding: 2rem; border-radius: 5px; margin-bottom: 2rem;">
+                <h3 style="color: #002855; margin-bottom: 1rem;">Donate via Wire Transfer or ACH</h3>
+                <p>Please contact <a href="mailto:donate@starrdrf.org" style="color: #002855; text-decoration: underline;">donate@starrdrf.org</a> for our banking information needed for wire transfers and ACHs.</p>
+            </div>
 
-                <div class="form-group">
-                    <label>Select Amount</label>
-                    <div class="amount-options">
-                        <button type="button" class="amount-button">$25</button>
-                        <button type="button" class="amount-button">$50</button>
-                        <button type="button" class="amount-button">$100</button>
-                        <button type="button" class="amount-button">$200</button>
-                    </div>
-                    <label for="custom-amount">Or enter custom amount:</label>
-                    <input type="number" id="custom-amount" name="amount" min="1" step="1" placeholder="$">
-                </div>
-
-                <div class="form-group">
-                    <label for="tribute">Tribute Gift (Optional)</label>
-                    <select id="tribute" name="tribute_type" class="form-select">
-                        <option value="">Select tribute type</option>
-                        <option value="in_honor">In Honor Of</option>
-                        <option value="in_memory">In Memory Of</option>
-                    </select>
-                    <input type="text" id="tribute_name" name="tribute_name" placeholder="Enter name" style="margin-top: 0.5rem;">
-                </div>
-
-                <button type="submit" class="submit-button">Donate Now</button>
-            </form>
-        </div>
-
-        <div class="mailing-info" style="max-width: 500px; margin: 2rem auto; padding: 2rem; background-color: #f8f9fa; border-radius: 5px;">
-            <h3 style="margin-bottom: 1rem;">Mail Your Gift</h3>
-            <p>To mail your gift, please send your check payable to:</p>
-            <address style="margin: 1rem 0; font-style: normal;">
-                CV Starr Disaster Relief Fund<br>
-                399 Park Avenue<br>
-                New York, NY 10022
-            </address>
-            <p style="margin-top: 1rem;">CV Starr Disaster Relief Fund is a 501(c)3 non-profit organization. Your gift is 100% tax deductible.</p>
-            <p style="margin-top: 0.5rem;"><strong>Federal Tax ID #81-4728239</strong></p>
-            <p style="margin-top: 1rem;">Please contact us at <a href="mailto:matchinggrants@starrdrf.org" style="color: #002855; text-decoration: underline;">matchinggrants@starrdrf.org</a> for more information.</p>
+            <div class="form-group" style="background-color: #f8f9fa; padding: 2rem; border-radius: 5px;">
+                <h3 style="color: #002855; margin-bottom: 1rem;">Matching Gifts: Double the Impact of Your Donation</h3>
+                <p style="margin-bottom: 1rem;">If you are an employee of C.V. Starr Co., or Starr International Companies, your donation could be matched dollar for dollar. Use the Company's matching gift platform to submit your receipt.</p>
+                <p><strong>Please note:</strong> the CV Starr Disaster Relief Fund EIN is 81-4728239</p>
+            </div>
         </div>
     </div>
 
