--- a/donate.html
+++ b/donate.html
@@ -58,12 +58,75 @@
             margin-bottom: 1.5rem;
         }
 
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
+
+        .modal.show {
+            display: flex;
+            justify-content: center;
+            align-items: start;
+            padding-top: 50px;
+        }
+
+        .modal-content {
+            background: white;
+            padding: 2rem;
+            border-radius: 8px;
+            max-width: 800px;
+            width: 90%;
+            max-height: 90vh;
+            overflow-y: auto;
+            position: relative;
+        }
+
+        .close-button {
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+            background: none;
+            border: none;
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
+        .btn {
+            background-color: #002855;
+            color: white;
+            padding: 0.5rem 1rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+
+        .btn:hover {
+            background-color: #003872;
+        }
+
         .footer {
             background-color: #f8f9fa;
             text-align: center;
             padding: 1rem;
             border-top: 1px solid #dee2e6;
             margin-top: 2rem;
+        }
+
+        @media print {
+            .modal-content {
+                position: static;
+                overflow: visible;
+            }
+            .close-button, .btn {
+                display: none;
+            }
         }
 
         @media (max-width: 600px) {
@@ -98,6 +161,8 @@
                     399 Park Ave, 3rd Floor<br>
                     New York, NY 10022
                 </address>
+                <p style="margin-bottom: 1rem;">If you are able to, please complete the form below to mail with your check. This helps us more quickly and efficiently track and attribute your gift.</p>
+                <button class="btn" onclick="openForm()">Fill Out Form</button>
             </div>
 
             <div class="form-group" style="background-color: #f8f9fa; padding: 2rem; border-radius: 5px; margin-bottom: 2rem;">
@@ -113,8 +178,44 @@
         </div>
     </div>
 
+    <!-- Modal Form -->
+    <div id="formModal" class="modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeForm()">&times;</button>
+            <!-- Printable Form Content -->
+            <h2 style="text-align: center; color: #002855; margin-bottom: 1.5rem;">CV STARR DISASTER RELIEF FUND</h2>
+            <h3 style="text-align: center; margin-bottom: 2rem;">CONTRIBUTION FORM</h3>
+
+            <form id="printableForm">
+                <!-- Form content here -->
+                <!-- Add the complete form HTML here -->
+            </form>
+
+            <div style="margin-top: 2rem; text-align: center;">
+                <button class="btn" onclick="window.print()">Print Form</button>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer">
         <p>© 2025 CV Starr Disaster Relief Fund. All rights reserved.</p>
     </footer>
+
+    <script>
+        function openForm() {
+            document.getElementById('formModal').classList.add('show');
+        }
+
+        function closeForm() {
+            document.getElementById('formModal').classList.remove('show');
+        }
+
+        // Close modal if clicking outside the content
+        document.getElementById('formModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeForm();
+            }
+        });
+    </script>
 </body>
 </html>
