--- a/donate.html
+++ b/donate.html
@@ -108,7 +108,12 @@
             <div class="form-group" style="background-color: #f8f9fa; padding: 2rem; border-radius: 5px;">
                 <h3 style="color: #002855; margin-bottom: 1rem;">Matching Gifts: Double the Impact of Your Donation</h3>
                 <p style="margin-bottom: 1rem;">If you are an employee of C.V. Starr Co., or Starr International Companies, your donation could be matched dollar for dollar. Use the Company's matching gift platform to submit your receipt.</p>
-                <p><strong>Please note:</strong> the CV Starr Disaster Relief Fund EIN is 81-4728239</p>
+                <p style="margin-bottom: 1rem;"><strong>Please note:</strong> the CV Starr Disaster Relief Fund EIN is 81-4728239</p>
+                <p style="margin-bottom: 1rem;"><strong>For Starr Employees:</strong> Access the Matching Gift Program Instructions & Application in the Learning Development Documents</p>
+                <div style="text-align: center; margin-top: 1.5rem;">
+                    <a href="https://starrit.sharepoint.com/:b:/r/sites/starrportal-learningdevelopment-prod/Learning%20Development%20Documents/Matching%20Gift%20Instructions/Matching%20Gift%20Program%20Instructions%20%26%20Application%20(edit%20enabled).pdf?csf=1&web=1&e=0BfcHm" 
+                       style="display: inline-block; background-color: #002855; color: white; padding: 0.75rem 2rem; text-decoration: none; border-radius: 4px; font-weight: bold;">Log In</a>
+                </div>
             </div>
         </div>
     </div>
