--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     399 Park Avenue, 3rd Flr.<br>
                     New York, NY 10022
                 </address>
-                <p>Please contact <a href="mailto:donate@starrdrf.org" style="color: #002855;">donate@starrdrf.org</a> for banking information needed for wire transfers and ACHs.</p>
+                <p>For banking information for wire transfers and ACHs contact <a href="mailto:donate@starrdrf.org" style="color: #002855;">donate@starrdrf.org</a>.</p>
 
                 <div style="margin-top: 1.5rem; border-top: 1px solid #dee2e6; padding-top: 1.5rem;">
                     <h3 style="margin-bottom: 1rem; color: #002855;">Tax Information</h3>
@@ -178,7 +178,7 @@
     <footer class="footer">
         <p>© 2025 CV Starr Disaster Relief Fund. All rights reserved.</p>
         <p>Contact us: <a href="mailto:donate@starrdrf.org">donate@starrdrf.org</a></p>
-        <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a></p>
+        
     </footer>
 </body>
 </html>
