--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
         .donate-button {
             display: inline-block;
-            background-color: #2ECC40;
+            background: linear-gradient(90deg, #2ECC40, #26A032);
             color: white;
-            padding: 1rem 2rem;
+            padding: 1rem 2.5rem;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
@@ -133,8 +133,8 @@
     </style>
 </head>
 <body>
-    <header class="header">
-        <h1 style="font-size: 1.5rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
+    <header class="header" style="padding: 0.75rem;">
+        <h1 style="font-size: 1.2rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
     </header>
 
     <nav>
@@ -143,8 +143,9 @@
     </nav>
 
     <div class="container">
-        <div class="hero">
-            <h1>CV Starr Disaster Relief Fund</h1>
+        <div class="hero" style="background: linear-gradient(to bottom, #002855, #004080); color: white; padding: 2rem; border-radius: 8px;">
+            <h1 style="font-size: 2.8rem; color: #ffd700;">CV Starr Disaster Relief Fund</h1>
+            <p style="margin-top: 1rem; font-size: 1.2rem;">Providing assistance to disaster victims worldwide since 2016</p>
         </div>
 
         <div class="content">
