--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="container">
         <div class="hero" style="background: linear-gradient(to bottom, #002855, #004080); color: white; padding: 2rem; border-radius: 8px;">
             <h1 style="font-size: 2.8rem; color: #ffd700;">CV Starr Disaster Relief Fund</h1>
-            <p style="margin-top: 1rem; font-size: 1.2rem;">Providing assistance to disaster victims worldwide since 2016</p>
+            
         </div>
 
         <div class="content">
@@ -161,8 +161,7 @@
                 <address style="font-style: normal;">
                     CV Starr Disaster Relief Fund<br>
                     399 Park Avenue, 3rd Flr.<br>
-                    New York, NY 10022
-                </address>
+                    New York, NY 10022<br><br></address>
                 <p>For banking information for wire transfers and ACHs contact <a href="mailto:donate@starrdrf.org" style="color: #002855;">donate@starrdrf.org</a>.</p>
 
                 <div style="margin-top: 1.5rem; border-top: 1px solid #dee2e6; padding-top: 1.5rem;">
