--- a/donate.html
+++ b/donate.html
@@ -21,7 +21,7 @@
         .header {
             background-color: #002855;
             color: white;
-            padding: 1rem;
+            padding: 0.75rem;
             text-align: center;
         }
 
@@ -67,23 +67,27 @@
         }
 
         .form-group h3 {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             margin-bottom: 1rem;
+            color: #002855;
         }
 
         .form-group p {
             margin-bottom: 1rem;
+            font-size: 1rem;
         }
 
         .button {
             display: inline-block;
-            background-color: #2ECC40;
+            background: linear-gradient(90deg, #2ECC40, #26A032);
             color: white;
-            padding: 0.75rem 1.5rem;
+            padding: 1rem 2.5rem;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
             text-transform: uppercase;
+            text-align: center;
+            letter-spacing: 1px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
@@ -121,14 +125,14 @@
                 padding: 1rem;
             }
             .form-group h3 {
-                font-size: 1.2rem;
+                font-size: 1.5rem;
             }
         }
     </style>
 </head>
 <body>
     <header class="header">
-        <h1 style="font-size: 1.5rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
+        <h1 style="font-size: 1.2rem; font-weight: normal;">Donate now to support the Southern California Wildfire Relief and Recovery</h1>
     </header>
 
     <nav>
@@ -138,15 +142,15 @@
 
     <div class="container">
         <div class="donation-form">
-            <h2 style="text-align: center; margin-bottom: 2rem; color: #002855;">Ways to Donate</h2>
+            <h2 style="text-align: center; margin-bottom: 2rem; color: #002855; font-size: 2rem;">Ways to Donate</h2>
 
             <div class="form-group">
-                <h3 style="color: #002855;">Donate by Check</h3>
+                <h3>Donate by Check</h3>
                 <p>Please make checks payable to "CV Starr Disaster Relief Fund" and mail to:</p>
                 <address style="font-style: normal;">
                     CV Starr Disaster Relief Fund<br>
                     399 Park Ave, 3rd Floor<br>
-                    New York, NY 10022
+                    New York, NY 10022<br><br>
                 </address>
                 <div style="text-align: center; margin-top: 1.5rem;">
                     <a href="https://drive.google.com/uc?export=download&id=1Cs46JRtbTruk0ORolHb4-8W6CJK1OR4P" class="button">
@@ -156,12 +160,12 @@
             </div>
 
             <div class="form-group">
-                <h3 style="color: #002855;">Donate via Wire Transfer or ACH</h3>
+                <h3>Donate via Wire Transfer or ACH</h3>
                 <p>For banking information please contact <a href="mailto:donate@starrdrf.org" style="color: #002855; text-decoration: underline;">donate@starrdrf.org</a>.</p>
             </div>
 
             <div class="form-group">
-                <h3 style="color: #002855;">Matching Gifts: Double the Impact of Your Donation</h3>
+                <h3>Matching Gifts: Double the Impact of Your Donation</h3>
                 <p>If you are an employee of C.V. Starr Co., or Starr International Companies, your donation could be matched dollar for dollar. Use the Company's matching gift platform to submit your receipt.</p>
                 <p><strong>Please note:</strong> the CV Starr Disaster Relief Fund EIN is 81-4728239</p>
                 <p><strong>For Starr Employees:</strong> Access the Matching Gift Program Instructions & Application in the Learning Development Documents</p>
@@ -176,7 +180,6 @@
     <footer class="footer">
         <p>© 2025 CV Starr Disaster Relief Fund. All rights reserved.</p>
         <p>Contact us: <a href="mailto:donate@starrdrf.org">donate@starrdrf.org</a></p>
-        <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a></p>
     </footer>
 </body>
 </html>
