--- a/donate.html
+++ b/donate.html
@@ -150,7 +150,7 @@
                 <address style="font-style: normal;">
                     CV Starr Disaster Relief Fund<br>
                     399 Park Ave, 3rd Floor<br>
-                    New York, NY 10022<br><br>
+                    New York, NY 10022<br><br>If you are able to, please download and complete the form below to mail in with your check. This helps us more quickly and efficiently track and attribute your gift.<br><br>
                 </address>
                 <div style="text-align: center; margin-top: 1.5rem;">
                     <a href="https://drive.google.com/uc?export=download&id=1Cs46JRtbTruk0ORolHb4-8W6CJK1OR4P" class="button">
@@ -165,9 +165,9 @@
             </div>
 
             <div class="form-group">
-                <h3>Matching Gifts: Double the Impact of Your Donation</h3>
+                <h3 style="font-size: 1.5rem;">Matching Gifts: Double the Impact of Your Donation</h3>
                 <p>If you are an employee of C.V. Starr Co., or Starr International Companies, your donation could be matched dollar for dollar. Use the Company's matching gift platform to submit your receipt.</p>
-                <p><strong>Please note:</strong> the CV Starr Disaster Relief Fund EIN is 81-4728239</p>
+                <p><strong>Please note:</strong> CV Starr Disaster Relief Fund EIN is 81-4728239</p>
                 <p><strong>For Starr Employees:</strong> Access the Matching Gift Program Instructions & Application in the Learning Development Documents</p>
                 <div style="text-align: center; margin-top: 1.5rem;">
                     <a href="https://starrit.sharepoint.com/:b:/r/sites/starrportal-learningdevelopment-prod/Learning%20Development%20Documents/Matching%20Gift%20Instructions/Matching%20Gift%20Program%20Instructions%20%26%20Application%20(edit%20enabled).pdf?csf=1&web=1&e=0BfcHm" class="button">Log In</a>
