--- a/donate.html
+++ b/donate.html
@@ -79,7 +79,7 @@
 
         .button {
             display: inline-block;
-            background: linear-gradient(90deg, #2ECC40, #26A032);
+            background: linear-gradient(90deg, #ffd700, #ffcc00);
             color: white;
             padding: 1rem 2.5rem;
             text-decoration: none;
@@ -93,7 +93,7 @@
         }
 
         .button:hover {
-            background-color: #26A032;
+            background-color: #ffc107;
             transform: translateY(-2px);
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
         }
