--- a/donate.html
+++ b/donate.html
@@ -79,7 +79,7 @@
 
         .button {
             display: inline-block;
-            background: linear-gradient(90deg, #ffd700, #ffcc00);
+            background-color: #ffd700;
             color: white;
             padding: 1rem 2.5rem;
             text-decoration: none;
@@ -93,7 +93,7 @@
         }
 
         .button:hover {
-            background-color: #ffc107;
+            background-color: #e6c200;
             transform: translateY(-2px);
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
         }
