--- a/donate.html
+++ b/donate.html
@@ -80,7 +80,7 @@
         .button {
             display: inline-block;
             background-color: #ffd700;
-            color: white;
+            color: #002855;
             padding: 1rem 2.5rem;
             text-decoration: none;
             border-radius: 5px;
