--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 <p><strong>Please make checks payable to:</strong> "CV Starr Disaster Relief Fund" and mail to:</p>
                 <address>
                     CV Starr Disaster Relief Fund<br>
+                    c/o The Starr Foundation<br>
                     399 Park Avenue, 3rd Flr.<br>
                     New York, NY 10022
                 </address>
