--- a/donate.html
+++ b/donate.html
@@ -149,7 +149,8 @@
                 <p>Please make checks payable to "CV Starr Disaster Relief Fund" and mail to:</p>
                 <address style="font-style: normal;">
                     CV Starr Disaster Relief Fund<br>
-                    399 Park Ave, 3rd Floor<br>
+                    c/o The Starr Foundation<br>
+                    399 Park Avenue, 3rd Flr.<br>
                     New York, NY 10022<br><br>If you are able to, please download and complete the form below to mail in with your check. This helps us more quickly and efficiently track and attribute your gift.<br><br>
                 </address>
                 <div style="text-align: center; margin-top: 1.5rem;">
